<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_aulas">

    <fragment
        android:id="@+id/nav_aulas"
        android:name="com.example.desafioinventario.ui.home.AulasFragment"
        android:label="@string/menu_aulas"
        tools:layout="@layout/fragment_aulas" />
    <fragment
        android:id="@+id/nav_usuarios"
        android:name="com.example.desafioinventario.ui.home.UsuariosFragment"
        android:label="@string/menu_usuarios"
        tools:layout="@layout/fragment_usuarios" />
    <fragment
        android:id="@+id/nav_dispositivos"
        android:name="com.example.desafioinventario.ui.home.DispositivosFragment"
        android:label="@string/menu_dispositivos"
        tools:layout="@layout/fragment_dispositivos" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.desafioinventario.ui.home.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>