<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edUsernameModifier"
        style="@style/EntradasLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/strUsuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edPassModifier"
        style="@style/EntradasLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/strPasswd"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edUsernameModifier"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edEmailModifier"
        style="@style/EntradasLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/strEmail"
        android:inputType="textEmailAddress|textEmailSubject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPassModifier"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/ckbEncargadoModifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strEncargado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ckbJefeModifier"
        app:layout_constraintTop_toBottomOf="@+id/ckbJefeModifier"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/ckbJefeModifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/strJefe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edEmailModifier"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="@+id/edEmailModifier"
        app:layout_constraintTop_toBottomOf="@+id/edEmailModifier"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/ckbProfesorModifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/strProfesor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ckbJefeModifier"
        app:layout_constraintTop_toBottomOf="@+id/ckbEncargadoModifier"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>